--- a/API/Web.config
+++ b/API/Web.config
@@ -18,7 +18,10 @@
     <add name="DefaultConnection" connectionString="Data Source=tsarserv.database.windows.net;Initial Catalog=tsardb;Integrated Security=False;User ID=dotcom1;Password=dotcomdev1!;Connect Timeout=15;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
   </connectionStrings>-->
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=tsarserv1.database.windows.net;Initial Catalog=tsardb;Integrated Security=False;User ID=devashen;Password=dotcomdev1!;Connect Timeout=15;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=tsarserv1.database.windows.net;Initial Catalog=tsardb;Integrated Security=False;User ID=devashen;Password=dotcomdev1!;Connect Timeout=15;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+      providerName="System.Data.SqlClient" />
+    <add name="API.Properties.Settings.DefaultConnection" connectionString="Data Source=tsarserv1.database.windows.net;Initial Catalog=tsardb;Persist Security Info=True;User ID=Devashen;Password=dotcomdev1!"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
