--- a/TSAR/Web.config
+++ b/TSAR/Web.config
@@ -12,10 +12,8 @@
     <add name="DefaultConnection" connectionString="Data Source=tsarserv.database.windows.net;Initial Catalog=tsardb;Integrated Security=False;User ID=dotcom1;Password=dotcomdev1!;Connect Timeout=15;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
   </connectionStrings>-->
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=tsarserv1.database.windows.net;Initial Catalog=tsardb;Integrated Security=False;User ID=devashen;Password=dotcomdev1!;Connect Timeout=15;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-      providerName="System.Data.SqlClient" />
-    <add name="TSAR.Properties.Settings.DefaultConnection" connectionString="Data Source=tsarserv1.database.windows.net;Initial Catalog=tsardb;User ID=Devashen;Password=dotcomdev1!"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=tsarserv1.database.windows.net;Initial Catalog=tsardb;Integrated Security=False;User ID=devashen;Password=dotcomdev1!;Connect Timeout=15;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+    <add name="TSAR.Properties.Settings.DefaultConnection" connectionString="Data Source=tsarserv1.database.windows.net;Initial Catalog=tsardb;User ID=Devashen;Password=dotcomdev1!" providerName="System.Data.SqlClient" />
   </connectionStrings>
     <!--<connectionStrings>
       <add name="DefaultConnection" connectionString="Data Source=10.3.8.10;Initial Catalog=201726; user Id=201726; password=dcrAhAw6; Integrated Security=false;" providerName="System.Data.SqlClient" />
