--- a/TSAR/packages.config
+++ b/TSAR/packages.config
@@ -7,7 +7,8 @@
   <package id="EFCodeFirst" version="0.8" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="Grid.Mvc" version="3.0.0" targetFramework="net452" />
-  <package id="iTextSharp" version="5.0.5" targetFramework="net452" />
+  <package id="iTextSharp" version="5.5.12" targetFramework="net452" />
+  <package id="itextsharp.xmlworker" version="5.5.12" targetFramework="net452" />
   <package id="jQuery" version="3.2.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
