--- a/MobileTsar/MobileTsar/MobileTsar.csproj
+++ b/MobileTsar/MobileTsar/MobileTsar.csproj
@@ -128,6 +128,9 @@
     <Compile Include="Views\TimesheetsPage.xaml.cs">
       <DependentUpon>TimesheetsPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\TsarBot.xaml.cs">
+      <DependentUpon>TsarBot.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MainPage.xaml">
@@ -352,6 +355,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\NewPostPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\TsarBot.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
